--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 			<version>2.0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.1.2</version>
+		</dependency>
+
 
 
 		<!--		<dependency>-->
