added jwt token when user sign in

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,3 +11,6 @@ spring:
 
 cloudinary:
   api-secret: ${CLOUDINARY_SECRET}
+
+jwt:
+  secret: "nvorwnvowntunvjownvownvlwrionrewgrgjwrgwkjrnwmriwrjngeq"
